--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "3.9.1",
     "express": "^4.17.2",
     "prisma": "^3.9.1"
   },
